# powerplant-coding-challenge

./: README.md  pyproject.toml
example_payloads/: payload4.json
src/: main.py
src/API/: prodData.py
tests/: test.py
