[tool.poetry]
name = "powerplant-coding-solution"
version = "0.1.0"
description = ""
authors = ["Milandou Lepas <lepsmiland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
pytest = "^6.2.4"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
